hide squares when use gueses the wrong color and turn all squares the same color when use gueses correctly.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  /* background-color: #fff; */
   background-color: #232323;
   font-family: "Dancing Script", "Cursive";
 }
@@ -17,9 +18,10 @@ body {
   margin: 1%;
   float: left;
   border: 1px solid white;
-  background-color: black;
+  background-color: #fff;
   transition: background 0.5s;
   cursor: pointer;
+  border-radius: 20%;
 }
 
 h1 {
@@ -103,9 +105,11 @@ button:hover {
   color: white;
 }
 
-.square {
-  border-radius: 20%;
+.hidden {
+  visibility: hidden;
 }
+
+
 
 /* * {
   border: 0px solid red;
